# convo

./: .gitignore  CLAUDE.md  ConvoFormat_PRD.md  FIXES.md  README.md  main.py  pyproject.toml
convo/: cli.py  privacy.py  references.py  titler.py
convo/renderers/: __init__.py  html.py  markdown.py  pdf.py  text.py
convo/templates/: conversation.html.j2
convo/themes/: __init__.py  dark.py  light.py
convoformat/: __init__.py  cli.py  parser.py  privacy.py  references.py  titler.py
convoformat/renderers/: html.py  markdown.py  pdf.py  text.py
convoformat/templates/: conversation.html.j2
convoformat/themes/: dark.py  light.py
examples/: basic.txt  with-references.txt
input/: sample1.txt
output/: sample1.html  sample1.md  sample1_fixed.md  sample1_text.txt  test_fixed.html  test_fixed.md  test_fixed.txt
tests/: test_parser.py  test_privacy.py
tests/fixtures/: sample_conversation.txt
