[project]
name = "convo-formatter"
version = "0.1.0"
description = "Convert Claude Code conversation transcripts to formatted documents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click",
    "reportlab",
    "jinja2",
]

[project.optional-dependencies]
private = [
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
convoformat = "convoformat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["convoformat"]

[tool.ruff]
target-version = "py313"
line-length = 100
